<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="90dp"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardBackgroundColor="@android:color/transparent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background_hourly_forecast">

        <TextView
            android:id="@+id/text_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/_1_am"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSurface"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/image_condition"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:contentDescription="@string/weather_condition_icon"
            app:srcCompat="@drawable/cloudy_3" />

        <TextView
            android:id="@+id/text_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/_25_c"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSurface"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
