<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_today"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.home.TodayFragment">

    <ProgressBar
        android:id="@+id/progress_loading"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error_message"
        android:textAlignment="center"
        android:textColor="?attr/colorOnSurface"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/progress_loading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/swipe_refresh" />
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/layout_today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_today"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/today"
                    android:textAlignment="center"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/mon_june_17"
                    android:textAlignment="center"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/layout_current_weather_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/background_rounded_rectangle"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image_weather_condition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:contentDescription="@string/weather_condition_image"
                        android:maxHeight="120dp"
                        android:maxWidth="120dp"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/cloudy_sunny" />

                    <TextView
                        android:id="@+id/text_weather_condition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mostly_cloudy"
                        android:textAlignment="center"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/text_temperature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/_25_c"
                        android:textAlignment="center"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="45sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/image_rain"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/rain_icon"
                                app:srcCompat="@drawable/umbrella"
                                app:tint="?attr/colorOnSurface"/>

                            <TextView
                                android:id="@+id/text_rain"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/_18"
                                android:textAlignment="center"
                                android:textColor="?attr/colorOnSurface" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/rain"
                                android:textAlignment="center"
                                android:textColor="?attr/colorOnSurface" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/image_wind"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/wind_icon"
                                app:srcCompat="@drawable/wind"
                                app:tint="?attr/colorOnSurface"/>

                            <TextView
                                android:id="@+id/text_wind_speed"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/_12_km_h"
                                android:textAlignment="center"
                                android:textColor="?attr/colorOnSurface" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/wind_speed"
                                android:textAlignment="center"
                                android:textColor="?attr/colorOnSurface" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/image_humidity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/humidity_icon"
                                app:srcCompat="@drawable/humidity"
                                app:tint="?attr/colorOnSurface"/>

                            <TextView
                                android:id="@+id/text_humidity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/_18"
                                android:textAlignment="center"
                                android:textColor="?attr/colorOnSurface" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/humidity"
                                android:textAlignment="center"
                                android:textColor="?attr/colorOnSurface" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/text_forecast_today"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today"
                        android:textColor="?attr/colorAccent"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/text_next_days"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_rounded_rectangle"
                        android:text="@string/next_5_days"
                        android:textAlignment="center"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="20sp"
                        android:padding="8dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_forecast_days"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:padding="16dp"
                    android:paddingStart="16dp"
                    tools:ignore="RtlSymmetry"
                    tools:listitem="@layout/item_hourly_forecast"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"/>
            </LinearLayout>
        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
